--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     ,
     "main"         : "chroma.js",
     "scripts"      : {
-	    "test": "vows; echo"
+	    "test": "vows"
     },
     "devDependencies": {
-        "uglify-js"     : "2.x",
-        "coffee-script" : "1.2",
-        "vows": "0.7.x"
+        "uglify-js": "2.4",
+        "coffee-script": "1.8",
+        "vows": "0.7.0"
     }
 }
