--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
   },
   "main": "chroma.js",
   "scripts": {
-	    "test": "vows"
+	    "test": "node_modules/.bin/vows"
   },
   "devDependencies": {
-    "coffee-script": "1.2",
-    "es6-shim": "^0.18.0",
-    "uglify-js": "2.0",
-    "vows": "0.7.0"
+    "coffee-script": "1.8",
+    "es6-shim": "^0.20.2",
+    "uglify-js": "2.4",
+    "vows": "0.8.0"
   },
   "spm": {
     "main": "chroma.js",
